Fix text-ellipsis white-space nowrap in author modal

--- a/app/components/common/authorListItem/authorListItem.scss
+++ b/app/components/common/authorListItem/authorListItem.scss
@@ -27,6 +27,7 @@
   width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .affiliation {
@@ -40,6 +41,7 @@
   width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .hIndexBox {
